--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,10 @@
 /* MAPAS  */
 /*---- ACA ARRANCA BODY---*/
 body {
+  width: 100%;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  background-color: #f8e2cf; }
   body ol, body ul {
     padding-left: 0; }
   body h1 {
@@ -29,11 +31,16 @@ body {
         background-color: #fdf6f0;
         border: #f8e2cf;
         padding: 10px 20px;
-        margin-bottom: 15px; }
+        margin-bottom: 15px;
+        border-radius: 12px; }
         body .encabezadoGeneral__sectionDos .buttonHeader a {
           font-size: 20px;
           text-decoration: none;
           color: #5e454b; }
+      body .encabezadoGeneral__sectionDos .buttonHeader:hover {
+        background-color: #5e454b; }
+        body .encabezadoGeneral__sectionDos .buttonHeader:hover a {
+          color: #fdf6f0; }
     body .encabezadoGeneral__sectionTres {
       width: 100%;
       display: flex;
@@ -69,7 +76,11 @@ body {
         font-size: 25px; }
         body .encabezadoGeneral__contenedorListaMenu__listaMenu a {
           text-decoration: none;
-          color: #5e454b; }
+          color: #5e454b;
+          border-radius: 12px; }
+        body .encabezadoGeneral__contenedorListaMenu__listaMenu a:hover {
+          background-color: #5e454b;
+          color: white; }
         body .encabezadoGeneral__contenedorListaMenu__listaMenu li {
           display: block; }
       body .encabezadoGeneral__contenedorListaMenu .productos {
@@ -80,9 +91,10 @@ body {
         display: none;
         position: absolute;
         list-style: none;
-        width: 100px;
+        width: 120px;
         height: 100px;
-        background: #fdf6f0; }
+        background: #fdf6f0;
+        border-radius: 12px; }
   body .mainGeneral {
     width: 100%; }
     body .mainGeneral__mainInicio {
@@ -193,19 +205,27 @@ body .mainGeneral__contenedorConjunto__button {
   border: solid 1px black;
   color: white;
   padding: 10px 20px;
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+  border-radius: 12px; }
 
 body .mainGeneral__contenedorConjunto__conjunto {
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid wheat; }
+  text-align: center;
+  border: 1px solid wheat;
+  border-radius: 12px; }
+  body .mainGeneral__contenedorConjunto__conjunto h2 {
+    font-size: 21px; }
 
 body .mainGeneral__contenedorConjunto__conjunto img {
   width: 250px;
-  height: 250px; }
+  height: 250px;
+  border-radius: 12px;
+  padding-top: 5px; }
 
 /*--------------------------------*/
 body .mainGeneral__tituloProductoConjuntoPijamaAroma {
@@ -215,11 +235,17 @@ body .mainGeneral__tituloProductoConjuntoPijamaAroma {
 body .mainGeneral__partePrincipalParrafoPoliticas {
   width: 100%;
   height: 800px;
-  background-color: #f8e2cf; }
+  background-color: #f8e2cf;
+  text-align: center; }
+  body .mainGeneral__partePrincipalParrafoPoliticas ol {
+    list-style: none; }
 
 body .mainGeneral__partePrincipalParrafoEnvios {
   width: 100%;
-  background-color: #f8e2cf; }
+  background-color: #f8e2cf;
+  text-align: center; }
+  body .mainGeneral__partePrincipalParrafoEnvios ul {
+    list-style: none; }
 
 /*     FORMULARIOS     */
 /*------------------------------*/
