--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,7 +99,7 @@ body{
                 }
                 a:hover{
                     background-color: $color-p;
-                    color: white;
+                    color:$color-secundario;
                 }
                 li{
                     display: block;
