--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
           border-radius: 12px; }
         body .encabezadoGeneral__contenedorListaMenu__listaMenu a:hover {
           background-color: #5e454b;
-          color: white; }
+          color: #fdf6f0; }
         body .encabezadoGeneral__contenedorListaMenu__listaMenu li {
           display: block; }
       body .encabezadoGeneral__contenedorListaMenu .productos {
@@ -122,6 +122,22 @@ body {
     align-items: center;
     justify-content: space-between;
     list-style: none; }
+    body .footerGeneral .b-example-divider {
+      height: 3rem;
+      background-color: rgba(0, 0, 0, 0.1);
+      border: solid rgba(0, 0, 0, 0.15);
+      border-width: 1px 0;
+      box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1), inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15); }
+    body .footerGeneral .bi {
+      vertical-align: -.125em;
+      fill: currentColor; }
+    body .footerGeneral .btn {
+      border-radius: 12px;
+      background-color: #fdf6f0;
+      border: #f8e2cf; }
+    body .footerGeneral .btn:hover {
+      background-color: #5e454b;
+      color: #fdf6f0; }
     body .footerGeneral p {
       color: #5e454b;
       font-weight: 700; }
@@ -201,12 +217,19 @@ body .Nueve {
   grid-area: conjunto9; }
 
 body .mainGeneral__contenedorConjunto__button {
-  background-color: black;
-  border: solid 1px black;
-  color: white;
   padding: 10px 20px;
   margin-bottom: 15px;
-  border-radius: 12px; }
+  border-radius: 12px;
+  background-color: #fdf6f0;
+  border: #f8e2cf; }
+  body .mainGeneral__contenedorConjunto__button .linkWpCompra {
+    text-decoration: none;
+    color: black; }
+
+body .mainGeneral__contenedorConjunto__button:hover {
+  background-color: #5e454b; }
+  body .mainGeneral__contenedorConjunto__button:hover a {
+    color: #fdf6f0; }
 
 body .mainGeneral__contenedorConjunto__conjunto {
   width: 100%;
@@ -219,7 +242,8 @@ body .mainGeneral__contenedorConjunto__conjunto {
   border: 1px solid wheat;
   border-radius: 12px; }
   body .mainGeneral__contenedorConjunto__conjunto h2 {
-    font-size: 21px; }
+    font-size: 21px;
+    color: #5e454b; }
 
 body .mainGeneral__contenedorConjunto__conjunto img {
   width: 250px;
