--- a/sass/componentes/_footer.scss
+++ b/sass/componentes/_footer.scss
@@ -7,6 +7,27 @@
     align-items: center;
     justify-content: space-between;
     list-style: none; 
+    .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+    }
+    
+    .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+    }
+    .btn{
+        border-radius: 12px;
+        background-color: $color-secundario;
+        border: $color-terciario;
+    }
+    .btn:hover{
+        background-color:$color-p ;
+        color:$color-secundario;
+    }
     p{
         color: $color-p;
         font-weight: 700;
