--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
       padding: 15px; }
       body .encabezadoGeneral__sectionTres .imagenLogoTipo {
         width: 60px;
-        height: 60px; }
+        height: auto; }
       body .encabezadoGeneral__sectionTres__tituloPrincipal {
         color: #bd4b4b;
         text-decoration: none;
@@ -77,10 +77,12 @@ body {
         body .encabezadoGeneral__contenedorListaMenu__listaMenu a {
           text-decoration: none;
           color: #5e454b;
-          border-radius: 12px; }
+          border-radius: 12px;
+          padding: 5px 20px; }
         body .encabezadoGeneral__contenedorListaMenu__listaMenu a:hover {
           background-color: #5e454b;
-          color: #fdf6f0; }
+          color: #fdf6f0;
+          padding: 5px 20px; }
         body .encabezadoGeneral__contenedorListaMenu__listaMenu li {
           display: block; }
       body .encabezadoGeneral__contenedorListaMenu .productos {
@@ -121,7 +123,8 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    list-style: none; }
+    list-style: none;
+    padding-top: 2rem; }
     body .footerGeneral .b-example-divider {
       height: 3rem;
       background-color: rgba(0, 0, 0, 0.1);
@@ -138,9 +141,6 @@ body {
     body .footerGeneral .btn:hover {
       background-color: #5e454b;
       color: #fdf6f0; }
-    body .footerGeneral p {
-      color: #5e454b;
-      font-weight: 700; }
 
 /*------ MAIN PRODUCTOS-CONJUNTO-PIJAMA-AROMA-------*/
 body .mainGeneral {
@@ -281,6 +281,16 @@ body .mainGeneral__partePrincipalParrafoEnvios {
   body .mainGeneral .fotoCarrousel {
     width: 500px;
     height: 400px; }
+  body .mainGeneral .h2Producto {
+    text-align: center;
+    font-size: 27px; }
+  body .mainGeneral__contenedorConjunto__conjunto img {
+    width: 200px;
+    height: 200px; }
+  body .mainGeneral__contenedorConjunto__conjunto h2 {
+    font-size: 20px; }
+  body .mainGeneral__contenedorConjunto__conjunto h3 {
+    font-size: 20px; }
   body .footerGeneral {
     width: 100%;
     display: flex;
@@ -292,23 +302,7 @@ body .mainGeneral__partePrincipalParrafoEnvios {
       font-size: 20px; }
       body .footerGeneral__veniAConocernos__googleMaps {
         width: 200px;
-        height: 110px; }
-    body .footerGeneral__mediosComunicacion {
-      padding-right: 15px;
-      font-size: 20px; }
-    body .footerGeneral__mediosDePago {
-      padding-right: 15px;
-      font-size: 20px; }
-  body .h2Producto {
-    text-align: center;
-    font-size: 27px; }
-  body .mainGeneral__contenedorConjunto__conjunto img {
-    width: 200px;
-    height: 200px; }
-  body .mainGeneral__contenedorConjunto__conjunto h2 {
-    font-size: 20px; }
-  body .mainGeneral__contenedorConjunto__conjunto h3 {
-    font-size: 20px; } }
+        height: 170px; } }
 
 @media only screen and (max-width: 768px) {
   body .encabezadoGeneral {
@@ -352,30 +346,7 @@ body .mainGeneral__partePrincipalParrafoEnvios {
   body .mainGeneral .fotoCarrousel {
     width: 400px;
     height: 300px; }
-  body .footerGeneral {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    font-size: 15px;
-    padding-left: 15px; }
-    body .footerGeneral__veniAConocernos {
-      padding-left: 9px;
-      font-size: 17px; }
-      body .footerGeneral__veniAConocernos__googleMaps {
-        width: 150px;
-        height: 90px; }
-    body .footerGeneral__mediosComunicacion {
-      padding-left: 9px;
-      font-size: 17px; }
-      body .footerGeneral__mediosComunicacion__listaFooter {
-        font-size: 17px;
-        list-style: none; }
-    body .footerGeneral__mediosDePago {
-      padding-left: 9px;
-      padding-right: 9px;
-      font-size: 17px; }
-  body .h2Producto {
+  body .mainGeneral .h2Producto {
     text-align: center;
     font-size: 17px; }
   body .mainGeneral__contenedorConjunto {
@@ -389,7 +360,20 @@ body .mainGeneral__partePrincipalParrafoEnvios {
     body .mainGeneral__contenedorConjunto__conjunto h2 {
       font-size: 16px; }
     body .mainGeneral__contenedorConjunto__conjunto h3 {
-      font-size: 16px; } }
+      font-size: 16px; }
+  body .footerGeneral {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    font-size: 15px;
+    padding-left: 15px; }
+    body .footerGeneral__veniAConocernos {
+      padding-left: 9px;
+      font-size: 17px; }
+      body .footerGeneral__veniAConocernos__googleMaps {
+        width: 150px;
+        height: 90px; } }
 
 @media (max-width: 480px) {
   body .encabezadoGeneral {
@@ -435,43 +419,7 @@ body .mainGeneral__partePrincipalParrafoEnvios {
     display: grid;
     grid-template-areas: "conjunto1 conjunto2" "conjunto3 conjunto4" "conjunto5 conjunto6" "conjunto7 conjunto8" "conjunto9 .";
     grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(2, 1fr); }
-  body .footerGeneral {
-    width: 100%;
-    display: block;
-    justify-content: space-between;
-    list-style: none;
-    font-size: 10px;
-    padding-left: 10px; }
-    body .footerGeneral__veniAConocernos {
-      display: flex;
-      flex-wrap: wrap;
-      padding-left: 5px;
-      font-size: 12px;
-      padding-top: 5px; }
-      body .footerGeneral__veniAConocernos p {
-        padding-right: 6px; }
-      body .footerGeneral__veniAConocernos__googleMaps {
-        width: 100px;
-        height: 50px; }
-    body .footerGeneral__mediosComunicacion {
-      padding-left: 5px;
-      font-size: 12px; }
-      body .footerGeneral__mediosComunicacion__listaFooter {
-        font-size: 12px;
-        list-style: none;
-        padding-bottom: 5px; }
-    body .footerGeneral__mediosDePago {
-      padding-left: 5px;
-      font-size: 12px; }
-      body .footerGeneral__mediosDePago__listaFooter img {
-        border-radius: 7px;
-        width: 35px;
-        height: 35px; }
-  body .h2Producto {
-    text-align: center;
-    font-size: 10px; }
-  body .mainGeneral__contenedorConjunto {
+    grid-template-columns: repeat(2, 1fr);
     width: 80%;
     margin: 0 auto;
     padding-top: 11px;
@@ -489,7 +437,31 @@ body .mainGeneral__partePrincipalParrafoEnvios {
       color: white;
       padding: 5px 10px;
       margin-bottom: 0;
-      font-size: 10px; } }
+      font-size: 10px; }
+  body .mainGeneral .h2Producto {
+    text-align: center;
+    font-size: 10px; }
+  body .footerGeneral {
+    width: 100%;
+    height: 270px;
+    display: block;
+    justify-content: space-between;
+    list-style: none;
+    font-size: 10px;
+    padding-left: 10px; }
+    body .footerGeneral__veniAConocernos {
+      padding-left: 5px;
+      font-size: 12px;
+      padding-top: 5px; }
+      body .footerGeneral__veniAConocernos__googleMaps {
+        width: 150px;
+        height: 120px; }
+    body .footerGeneral .footerDerechosAutor {
+      margin-bottom: 0 !important; }
+    body .footerGeneral .bloqueFormularioFooter {
+      display: block !important; }
+    body .footerGeneral .botonSubscribirseFooter {
+      margin-top: 5px; } }
 
 #btn-menu {
   display: none; }
