--- a/sass/componentes/_footer.scss
+++ b/sass/componentes/_footer.scss
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-between;
     list-style: none; 
+    padding-top: 2rem;
     .b-example-divider {
         height: 3rem;
         background-color: rgba(0, 0, 0, .1);
@@ -28,9 +29,6 @@
         background-color:$color-p ;
         color:$color-secundario;
     }
-    p{
-        color: $color-p;
-        font-weight: 700;
-    }
+
 
 }
