--- a/sass/componentes/_footer.scss
+++ b/sass/componentes/_footer.scss
@@ -29,6 +29,10 @@
         background-color:$color-p ;
         color:$color-secundario;
     }
-
+    .parrafoMapaDeSitio{
+        width: 196px;
+        height: 24px;
+        color: #f5c6aa;
+    }
 
 }
