--- a/sass/componentes/_mediaQueryDesktop.scss
+++ b/sass/componentes/_mediaQueryDesktop.scss
@@ -83,6 +83,9 @@
                     height: 170px;
                 }
             }
+            .parrafoMapaDeSitio{
+                color: #f5c6aa;
+            }
         }
     }
 }
