--- a/sass/componentes/_mediaQueryMobile.scss
+++ b/sass/componentes/_mediaQueryMobile.scss
@@ -56,7 +56,6 @@
             }
             .contenedorCarrouselSoloInicio{
                 display: block;
-            
             }
             &__contenedorConjunto{
                 display: grid;
@@ -97,7 +96,7 @@
         }
         .footerGeneral{
             width: 100%;
-            height: 270px;
+            height: 400px;
             display: block;
             justify-content: space-between;
             list-style: none;
@@ -121,6 +120,11 @@
             }
             .botonSubscribirseFooter{
                 margin-top: 5px;
+            }
+            .parrafoMapaDeSitio{
+                width: 52px;
+                height: 72px;
+                color: #f5c6aa;
             }
         }
         
