--- a/sass/componentes/_mainInicio.scss
+++ b/sass/componentes/_mainInicio.scss
@@ -1,10 +1,10 @@
 .mainGeneral{
     width: 100%;
-    
     &__mainInicio{
         width: 100%;
         background-color: $color-terciario;
         text-align: center;
+        padding-top: 20px;
         .h2{
             justify-content: center;
             align-items: center;
@@ -12,26 +12,11 @@
             text-align: center;
         }
     }
-    .fotoCarrousel{
-        justify-content: center;
-        align-items: center;
-        width: 1000px;
-        height: 700px;
-    }
-    .contenedorCarrouselSoloInicio{
-        width: 100%;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        padding-top: 25px;
-        padding-right: 25px;
-        padding-bottom: 25px;
-        margin:0;
-    
+    .destacados{
+        padding: 12px;
     }
     
 }
-        
 
 
 
