--- a/sass/componentes/_mediaQueryDesktop.scss
+++ b/sass/componentes/_mediaQueryDesktop.scss
@@ -3,19 +3,6 @@
         .encabezadoGeneral{
             width: 100%;
             padding: 0;
-            &__sectionUno{
-                
-                p{
-                    font-size: 22px;
-                    
-                }
-            }
-            &__sectionDos{
-                display:flex;
-                flex-flow: row wrap;
-                justify-content: flex-end;
-                margin-right: 0;
-            }
             &__sectionTres{
                 width: 100%;
                 padding: 15px;
@@ -46,10 +33,6 @@
                     }
                 }
             }
-            .fotoCarrousel{
-                width: 500px;
-                height: 400px;
-            }
             .h2Producto{
                 text-align: center;
                 font-size: 27px;
@@ -75,15 +58,19 @@
             justify-content: space-between;
             list-style: none;
             font-size: 20px;
-            &__veniAConocernos{
-                padding-left: 15px;
-                font-size: 20px;
-                &__googleMaps{
-                    width: 200px;
-                    height: 170px;
-                }
+            .footerDerechosAutor{
+                margin-bottom: 0 !important;
+            }
+            .bloqueFormularioFooter{
+                display: block !important;
+                
+            }
+            .botonSubscribirseFooter{
+                margin-top: 5px;
             }
             .parrafoMapaDeSitio{
+                width: 52px;
+                height: 24px;
                 color: #f5c6aa;
             }
         }
