--- a/sass/componentes/_mediaQueryMobile.scss
+++ b/sass/componentes/_mediaQueryMobile.scss
@@ -118,6 +118,9 @@
                 height: 72px;
                 color: #f5c6aa;
             }
+            .botonFooterContacto{
+                display: none;
+            }
         }
         
     }
